# opencraft-android

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/chyves/opencraft/: MainActivity.kt
